
[TestPin/simple - 1]
{
  "version": 1,
  "rules": [
    {
      "action": "CONVERT",
      "selector": {
        "identifier": "docker-image://alpine:3.18",
        "matchType": "EXACT"
      },
      "updates": {
        "identifier": "docker-image://docker.io/library/alpine:3.18@sha256:dca69b6823d2cff137b073f278d243679fccbbe39b939dbff7747587013cc3b7"
      }
    }
  ]
}

---

[TestPin/multistage - 1]
{
  "version": 1,
  "rules": [
    {
      "action": "CONVERT",
      "selector": {
        "identifier": "docker-image://golang:1.21",
        "matchType": "EXACT"
      },
      "updates": {
        "identifier": "docker-image://docker.io/library/golang:1.21@sha256:96e077c89b19c49293d08095895f67d9ddbbf5ceb6afa82c0b043ae78911d962"
      }
    },
    {
      "action": "CONVERT",
      "selector": {
        "identifier": "docker-image://alpine:3.18",
        "matchType": "EXACT"
      },
      "updates": {
        "identifier": "docker-image://docker.io/library/alpine:3.18@sha256:dca69b6823d2cff137b073f278d243679fccbbe39b939dbff7747587013cc3b7"
      }
    }
  ]
}

---

[TestPin/ghcr - 1]
{
  "version": 1,
  "rules": [
    {
      "action": "CONVERT",
      "selector": {
        "identifier": "docker-image://ghcr.io/actions/actions-runner:latest",
        "matchType": "EXACT"
      },
      "updates": {
        "identifier": "docker-image://ghcr.io/actions/actions-runner:latest@sha256:ab21bc9f6d0b48ff736eb43e8aa57c4f5dc0b0c4f2bac6ead8abaf571363ad93"
      }
    }
  ]
}

---

[TestPin/scratch - 1]
{
  "version": 1,
  "rules": [
    {
      "action": "CONVERT",
      "selector": {
        "identifier": "docker-image://golang:1.21",
        "matchType": "EXACT"
      },
      "updates": {
        "identifier": "docker-image://docker.io/library/golang:1.21@sha256:96e077c89b19c49293d08095895f67d9ddbbf5ceb6afa82c0b043ae78911d962"
      }
    }
  ]
}

---
